# xino

./: CMakeLists.txt  README.md  config.h.in  toolchain.cmake
c_shim/: CMakeLists.txt
c_shim/include/: io_buffer.h
c_shim/include/sys/: queue.h
c_shim/src/: ctype.c  heap_alloc.c  io_buffer.c  malloc.c  snprintf.c  stdio.c  stdlib.c  string.c  strtox.c  vsnprintf.c
docs/: build.md  plat-qemu.md  qemu.md  rock5b.md
docs/plat/: qemu.md  rock5b.md
efi/: CMakeLists.txt  efi_linker.lds.in  efi_stub.c  gzip_decompress.c  pe.h  pe_header.S
fdt/: CMakeLists.txt  README.md
ukernel/: CMakeLists.txt  config.cmake  linker.lds.in  linker.ldspp  regs.spec  spec_sysregs
ukernel/configs/: plat_qemu.cmake  plat_rock5b.cmake
ukernel/host_tools/: CMakeLists.txt
ukernel/include/: addr_types.hpp  allocator.hpp  barrier.hpp  cpu.hpp  errno.hpp  io.hpp  mm.hpp  mm_paging.hpp  mm_va_layout.hpp  percpu.hpp  plat_uart.hpp  psci.hpp  runtime.hpp  smccc.hpp  sync.hpp  uart.hpp
ukernel/src/: allocator.cpp  cpu.cpp  main.cpp  mm_paging.cpp  mm_va_layout.cpp  percpu.cpp  plat_uart.cpp  reloc.c  runtime.cpp  smccc.S  start.S  uart.cpp
